--- a/centraldrive/style.css
+++ b/centraldrive/style.css
@@ -6,3 +6,14 @@ button {
   width: 8rem;
   height: 2.5rem;
 }
+
+img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 100%;
+}
+
+td, th, {
+  vertical-align: middle;
+  text-align: center;
+}
